--- a/styles/global.css
+++ b/styles/global.css
@@ -8,3 +8,11 @@
   background-color: rgba(32, 34, 38, 0.75);
   /* border-bottom: 1px solid rgba(255, 255, 255, 0.125); */
 }
+
+.no-glassmorph {
+  background: none;
+  box-shadow: none;
+  backdrop-filter: unset;
+  -webkit-backdrop-filter: unset;
+  border: none;
+}
