feat: config source code

--- a/styles/global.css
+++ b/styles/global.css
@@ -30,7 +30,8 @@
 }
 
 /* Style your items */
-.my-masonry-grid_column > div { /* change div to reference your elements you put in <Masonry> */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
   margin-bottom: 30px;
 }
 
@@ -49,18 +50,21 @@
 }
 
 .markdown-container > p > img {
-  @apply max-w-[240px] md:max-w-xs lg:max-w-lg mx-auto my-0
+  @apply max-w-[240px] md:max-w-xs lg:max-w-lg mx-auto my-0;
 }
 
 .markdown-container blockquote {
-  @apply border-l-4 border-tertiary ;
+  @apply border-l-4 border-tertiary;
 }
-.prose > pre, .prose-lg > pre, .md\:prose-lg > pre{
+.prose > pre,
+.prose-lg > pre,
+.md\:prose-lg > pre {
   @apply bg-primary;
   padding: 0 !important;
 }
 
-.prose pre > pre, .prose-lg pre > pre{
+.prose pre > pre,
+.prose-lg pre > pre {
   margin: 0 !important;
   @apply md:m-0 m-0;
 }
