--- a/styles/global.css
+++ b/styles/global.css
@@ -21,18 +21,18 @@
   display: -webkit-box; /* Not needed if autoprefixing */
   display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  margin-left: -30px; /* gutter size offset */
   width: auto;
+  @apply md:-ml-7 -ml-4; /* gutter size offset */
 }
 .my-masonry-grid_column {
-  padding-left: 30px; /* gutter size */
   background-clip: padding-box;
+  @apply md:pl-7 pl-4; /* gutter size */
 }
 
 /* Style your items */
 .my-masonry-grid_column > div {
   /* change div to reference your elements you put in <Masonry> */
-  margin-bottom: 30px;
+  @apply md:mb-7 mb-4;
 }
 
 .markdown-container > h1,
